--- a/DEV - Workflows/Prompts/github_spec_kit/sk__plan_spec.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/sk__plan_spec.yaml
@@ -42,7 +42,7 @@ field_handling:
     rule: "Limit file operations to scope when provided"
 
 # ─────────────────────────────────────────────────────────────────
-# WORKFLOW - PLANNING PHASE ONLY
+# WORKFLOW
 # ─────────────────────────────────────────────────────────────────
 workflow:
   step_1_request_analysis:
