Code Plan, Empty = /specs

--- a/DEV - Workflows/Prompts/code_plan.yaml
+++ b/DEV - Workflows/Prompts/code_plan.yaml
@@ -21,7 +21,7 @@ operating_mode:
 # ─────────────────────────────────────────────────────────────────
 user_inputs:
   target_folder: "[TARGET_FOLDER]"
-  context: "[CONTEXT]
+  context: "[CONTEXT]"
   complexity: "[COMPLEXITY]"
   request: "[REQUEST]"
 
