--- a/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__plan_spec.yaml
+++ b/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__plan_spec.yaml
@@ -17,20 +17,39 @@ operating_mode:
 # USER INPUTS
 # ─────────────────────────────────────────────────────────────────
 user_inputs:
-  git_branch: "MAIN"
-  spec_folder: "/Users/michelkerkmeester/MEGA/Websites/anobel.com/specs/005-form-validation-helpers"
-  context: "Helper Rework"
+  branch_strategy: "[BRANCH_STRATEGY]"
+  git_branch: "[GIT_BRANCH]"
+  spec_folder: "[SPEC_FOLDER]"
+  context: "[CONTEXT]"
   issues: "[ISSUES]"
-  request: "We already have a plan in this folder, which you can use as a basis to re-do it based on speckit workflow. DO NOT delete original plan."
-  environment: "https://a-nobel-en-zn.webflow.io/contact"
-  scope: "/contact"
+  request: "[REQUEST]"
+  environment: "[STAGING LINK]"
+  scope: "[FILES]"
 
 # ─────────────────────────────────────────────────────────────────
 # FIELD HANDLING
 # ─────────────────────────────────────────────────────────────────
 field_handling:
+  branch_strategy:
+    required: true
+    type: enum
+    options:
+      - feature_branch: "Create new feature branch (auto-create feature-{NNN} aligned with spec folder)"
+      - main_branch: "Work on main branch (skip branch creation and commit directly to main)"
+    note: "This decision is required at Step 1 and controls branch creation during planning"
+
+  spec_id:
+    derive_from: "spec_folder path using pattern specs/{NNN} or specs/{NNN-name}"
+    fallback: "Extract numeric portion or use timestamp if extraction fails"
+    note: "Used to generate feature_branch_name"
+
+  feature_branch_name:
+    pattern: "feature-{spec_id}"
+    condition: "Only used when branch_strategy == feature_branch"
+
   defaults:
-    git_branch_empty: "Auto-create feature-{NNN} from highest +001"
+    branch_strategy_empty: "Prompt user at Step 1; cannot proceed without choice"
+    git_branch_empty: "If branch_strategy == feature_branch: use feature_branch_name; else: main"
     spec_folder_empty: "Auto-create specs/{NNN} from highest +001"
     context_empty: "Infer from [REQUEST] and [STAGING LINK]"
     issues_empty: "Investigate during workflow"
@@ -40,6 +59,14 @@ field_handling:
   scope_policy:
     default: "specs/**"
     rule: "Limit file operations to scope when provided"
+
+  branch_creation:
+    condition: "Only execute when branch_strategy == feature_branch"
+    steps:
+      - "Check if feature branch already exists"
+      - "Create feature-{spec_id} if not exists"
+      - "Checkout feature branch"
+    skip_when: "branch_strategy == main_branch"
 
 # ─────────────────────────────────────────────────────────────────
 # SUB-AGENTS (PARALLEL ANALYSTS)
@@ -76,22 +103,51 @@ sub_agents:
 workflow:
   step_1_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
-    git_branch: "[GIT_BRANCH] → auto-create if empty"
+    branch_strategy_prompt:
+      required: true
+      question: |
+        Branch Strategy: Choose how you want to work with Git for this spec.
+        
+        Option A: Create new feature branch
+          - We will auto-create feature-{NNN} aligned with the spec folder
+          - Allows isolated development and testing
+          - Can be integrated to main later via complete workflow
+        
+        Option B: Work on main branch
+          - Skip branch creation and commit directly to main
+          - Faster for small changes or hotfixes
+          - No separate integration needed
+        
+        This decision is required before proceeding and will be inherited by implementation workflow.
+      options:
+        - value: feature_branch
+          label: "Create new feature branch (feature-{NNN})"
+        - value: main_branch
+          label: "Work on main branch (no branching)"
+    branch_strategy: "[BRANCH_STRATEGY] → REQUIRED; cannot proceed without choice"
+    git_branch: "[GIT_BRANCH] → derived from branch_strategy"
     spec_folder: "[SPEC_FOLDER] → auto-create if empty"
     context: "[CONTEXT] → infer if empty"
     issues: "[ISSUES] → discover if empty"
     request: "[REQUEST] → REQUIRED"
     environment: "[STAGING LINK] → skip DevTools if empty"
     scope: "[FILES] → default scope if empty"
-    action: Analyze user inputs and confirm understanding
+    action: |
+      1. Prompt user for branch_strategy (required)
+      2. Derive git_branch based on choice:
+         - If feature_branch: extract spec_id from spec_folder, create feature-{spec_id}
+         - If main_branch: use 'main'
+      3. Analyze user inputs and confirm understanding
     outputs:
+      - branch_strategy_chosen
+      - git_branch_resolved
       - requirement_summary
       - approach_overview
       - complexity_assessment
-    validation: understanding_confirmed
+    validation: understanding_confirmed_and_branch_strategy_set
     approval_gate:
       type: USER_APPROVAL_REQUIRED
-      prompt: "Requirements analyzed. Proceed to pre-work review?"
+      prompt: "Requirements analyzed. Branch strategy: {branch_strategy} on {git_branch}. Proceed to pre-work review?"
       confirmation_needed: true
 
   step_2_pre_work_review:
@@ -244,10 +300,21 @@ workflow:
 termination:
   after_step: 7
   message: "Planning phase completed successfully. Workflow terminated after step 7 as requested."
+  branch_integration_note: |
+    Branch strategy has been set and will be inherited by subsequent workflows.
+    If branch_strategy == feature_branch:
+      - Feature branch created for planning artifacts
+      - Implementation workflow will use this branch
+      - Complete workflow will offer integration to main at the end
+    If branch_strategy == main_branch:
+      - Planning artifacts committed directly to main
+      - Implementation workflow will continue on main
+      - No integration step needed
   next_steps:
     - Review planning documentation
     - Approve technical approach
-    - Use workflow_automated.yaml for full implementation
+    - Branch strategy: {branch_strategy} on {git_branch}
+    - Use workflow_automated.yaml for full implementation (will inherit branch strategy)
     - Or use workflow.yaml for manual implementation with gates
 
 # ─────────────────────────────────────────────────────────────────
